2007-11-05 01:50  rjtanner

	* azumauindo/minatomachi/ketsueki_itsuryuu/ground,
	  azumauindo/suno-yamatoshi/nenshou_youso/ground,
	  azumauindo/zaseki_dzuki_ryoku/ground, brest/black_shield/ground,
	  darcap/darcap/guilds/poisoned_dagger/ground,
	  darcap/darcap/guilds/smoking_cauldron/ground,
	  navar_city/dreaming_sage/ground,
	  pup_land/guilds/laughing_skull/ground,
	  pup_land/guilds/purple_butterfly/ground,
	  santo_dominion/guilds/drunken_barbarian/ground,
	  scorn/guilds/mailed_fist/ground,
	  wolfsburg/guilds/damned_heretics/ground: Update the guild maps to
	  include map difficulty levels, ability to create an altar of
	  valkyrie for 5 holy_shield, and altars are now level 120 (players
	  are no longer able to reconsecrate them) which addresses bug
	  [1824769] Players able to reconsecrate guild altars

2007-11-05 01:25  rjtanner

	* templates/guild/basement, templates/guild/bigchest,
	  templates/guild/guild_alchemy, templates/guild/guild_hq,
	  templates/guild/guild_toolshed, templates/guild/guildman_lounge,
	  templates/guild/guildmaster_lounge,
	  templates/guild/hallofjoining, templates/guild/journeyman_lounge,
	  templates/guild/masters_lounge, templates/guild/novice_lounge,
	  templates/guild/secondfloor: Update the guild template to include
	  map difficulty levels, entrance xy coordinates, ability to create
	  an altar of valkyrie for 5 holy_shield, altars are now level 120
	  (players are no longer able to reconsecrate them) which addresses
	  bug [1824769] Players able to reconsecrate guild altars

2007-11-04 19:07  akirschbaum

	* editor/scripts/LegacySpellConverter: Add Gridarta converter
	  script to update legacy spellcasting objects in map files.

2007-11-04 19:05  akirschbaum

	* azumauindo/minatomachi/ketsueki_itsuryuu/upper,
	  azumauindo/suno-yamatoshi/nenshou_youso/upper,
	  azumauindo/zaseki_dzuki_ryoku/upper, brest/Castle/LargeRoom,
	  brest/Castle/castle, brest/asyvan/gate9, brest/asyvan/palace3,