@@ -1,3 +1,13 @@
+2007-12-18 tchize
+M    python/misc/npc_dialog.py
+M    python/CFDialog.py
+M    start/newbieshouse
+A    start/sigmund.msg
+Update match rules of CFDialog, add a script to use it
+easily in maps, update newbie house so the wise sigmund
+can provide more interactive support to players
+
+
 2007-11-05 01:50  rjtanner
 
 	* azumauindo/minatomachi/ketsueki_itsuryuu/ground,
